<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="button_label_spotify">Spotify Streamer</string>
    <string name="button_label_scores">Scores App</string>
    <string name="button_label_library">Library App</string>
    <string name="button_label_buildbigger">Build it Bigger</string>
    <string name="button_label_xyzreader">XYZ Reader</string>
    <string name="button_label_capstone">Capstone: My Own App</string>

    <string name="message_start">This will launch the</string>
    <string name="message_end">application!</string>
</resources>
